fullSandbox11072023/force-app/main/default/objects/TradeIns__c/TradeIns__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Trade In products per BU.</description>
    <label>TradeIns</label>
</CustomObject>