fullSandbox11072023/force-app/main/default/objects/TradeIns__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of trade-in product.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>