fullSandbox11072023/force-app/main/default/objects/TradeIns__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <description>Distribution Channel is a two digit number.  Normally 10 or 20.</description>
    <inlineHelpText>Distribution Channel is a two digit number.  Normally 10 or 20.</inlineHelpText>
    <label>Distribution Channel</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>