fullSandbox11072023/force-app/main/default/objects/TradeIns__c/fields/Material_Key__c.field-meta.xml
<CustomField>
    <fullName>Material_Key__c</fullName>
    <description>Combination of material name, sales org, and distribution channel.</description>
    <inlineHelpText>Combination of material name, sales org, and distribution channel.</inlineHelpText>
    <label>Material Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>