fullSandbox11072023/force-app/main/default/objects/TradeIns__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <description>Sales org of the product.</description>
    <label>Sales Org</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>