fullSandbox11072023/force-app/main/default/objects/TradeIns__c/fields/Trade_in_Price__c.field-meta.xml
<CustomField>
    <fullName>Trade_in_Price__c</fullName>
    <description>Trade-in value.</description>
    <label>Trade-in Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>